--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,55 @@
+*, *::before, *::after { box-sizing: border-box; }
+ul, ol { padding: 0; }
+body, h1, h2, h3, h4, p, ul, ol, li, figure, figcaption, blockquote, dl, dd { margin: 0; }
+body { scroll-behavior: smooth; text-rendering: optimizeSpeed; line-height: 1.5; }
+ul, ol { list-style: none; }
+a:not() { text-decoration-skip-ink: auto; }
+img { max-width: 100%; display: block; }
+article > * + * { margin-top: 1em; }
+input, button, textarea, select { font: inherit; }
+@media (prefers-reduced-motion: reduce) {
+  * { animation-duration: 0.01ms !important; animation-iteration-count: 1 !important; transition-duration: 0.01ms !important; scroll-behavior: auto !important; }
+}
+
+@supports (-ms-ime-align:auto) {
+	input[type=range] { margin: 0; }
+}
+
+:root {
+    /* TOPBAR COLORS */
+    --gui-top-lgocol: #00A3FF;
+    --gui-top-bgdcol: #FFFFFF;
+    --gui-top-icncol: #999999;
+    --gui-top-notifs: #FB3C3C;
+    
+    /* SIDEBAR COLORS */
+    --gui-sid-bgdcol: #FFFFFF;
+    --gui-sid-mnucol: #A1A5B7;
+    --gui-sid-subcol: #7E8299;
+    --gui-sid-ovrcol: #00A3FF;
+    --gui-sid-ovrbgd: rgba(245,248,250,.8);
+
+    /* MAIN PAGES COLORS */
+    --gui-pag-bgdcol: #eff2f5;
+
+    --base-white: #FFFFFF;
+    --base-lightgray: #F5F5F5;
+    --base-mediumgray: #999999;
+
+    --base-rednostonks: #FB3C3C;
+    --base-greenstonks: #67AD4B;
+
+}
+
+
 .container {
     display: flex;
     flex-direction: row;
 }
 
 .page {
-    flex: 6;
-    padding-top: 10px;
+    flex: 5;
+    padding: 30px;
+    border-radius: 20px 0 0 0;
+    background: var(--gui-pag-bgdcol);
 }
