--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -1,9 +1,11 @@
 .chart {
-    width: 65%;
-    margin: 20px auto;
+    width: 100%;
+    margin: 20px 0;
     padding: 20px;
+    border-radius: 10px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, .75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, .75);
+    background: var(--base-white);
 }
 
 .chart .chartTitle {
