--- a/src/components/featuredInfos/featuredInfos.css
+++ b/src/components/featuredInfos/featuredInfos.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -13,6 +13,7 @@
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, .75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, .75);
+    background: var(--base-white);
     cursor: pointer;
 }
 
@@ -42,11 +43,11 @@
 .featured .featuredItem .featuredMoneyContainer .featuredMoneyRate .featuredIcon {
     font-size: 14px !important;
     margin-left: 5px;
-    color: #00CC00;
+    color: var(--base-greenstonks);
 }
 
 .featured .featuredItem .featuredMoneyContainer .featuredMoneyRate .featuredIcon.negative {
-    color: #CC0000;
+    color: var(--base-rednostonks);
 }
 
 .featured .featuredItem .featuredSub {
