--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,6 @@
 .homepage .homeWidgets {
     display: flex;
     flex-direction: row;
-    margin: 20px;
+    justify-content: space-between;
+    margin: 20px 0;
 }
