--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -55,7 +55,7 @@
   .topbar .topbarWrapper .topbarRght .topbarAvatar img {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 0.475rem;
     cursor: pointer;
   }
   
